fixed incorrect board list styles on mobile

--- a/src/pages/Home/ui/Home.module.scss
+++ b/src/pages/Home/ui/Home.module.scss
@@ -7,7 +7,7 @@
     justify-content: space-between;
 
     overflow-y: auto;
-    max-height: calc(100vh - 20px);
+    max-height: calc(100vh - 0px);
     padding-bottom: 10px;
 }
 
